Removed unnecessary divs, fixed navigation button alignment

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -194,8 +194,9 @@ footer {
     
     nav li {
         font-size: 1.15em;
-        margin: 0 1.3em;
+        margin: 0 3.1vw;
         padding-top: 0.6em;
+        width: 20vw;
     }
 }
 
